# arm5-tools

./: README.md
pyarm5/: README.md  pyproject.toml
pyarm5/arm5/: bases.py  typing.py  utils.py
pyarm5/arm5/datamodels/: arts.py  times.py
pyarm5/arm5/io/: csv.py  hashio.py
pyarm5/pyarm5/: bases.py
pyarm5/pyarm5/datamodels/: arts.py  vis.py
pyarm5/tests/datamodels/: test_arts.py  test_times.py
pyarm5/tests/io/: test_csv.py  test_hashio.py
pyarm5/tests/io/data/: example.csv
