[tool.poetry]
name = "arm5"
version = "0.1.0"
description = "Various tools for Ars Magica 5th edition"
authors = ["Riernar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = ">=23.3.0"
mypy = ">=1.3.1"
pytest = "^7.4.0"
ruff = "^0.0.277"
poethepoet = "^0.21.0"
ipython = "^8.14.0"

[tool.black]
line_length = 99


[tool.isort]
profile = "black"
line_length = 99
skip_gitignore = true

[tool.ruff]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"

[tool.poe.tasks]
black = "black . "
isort = "isort ."
format = ["black", "isort"]
lint = "ruff ."
typing = "mypy ."
test = "pytest -v tests"
precommit = ["format", "lint", "typing", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
